2004-08-24  Mark D. Baushke  <mdb@cvshome.org>

	* recurse.c (do_recursion): Correct test for calling
	server_pause_check to occur when locktype != CVS_LOCK_WRITE.
	(Patch suggested by Ian Lance Taylor <ian@wasabisystems.com>
	in bug#198).

2004-08-24  Derek Price <derek@ximbiot.com>

	* sanity.sh: Update a few tests to account for the recent error message
	changes.

2004-08-24  Derek Price <derek@ximbiot.com>

	* rcs.c (RCS_valid_rev): Declare arg const.
	* rcs.h: Likewise.

2004-08-24  Derek Price <derek@ximbiot.com>

	* rcs.c (translate_symtag): Prevent infinite loop.
	* tag.c (tag_check_valid): Check tag syntax before searching for tags.
	* sanity.sh (tag-space): Some tests for the above.
	(Report from Dan Peterson <dbpete@aol.com>.)

2004-08-24  Derek Price <derek@ximbiot.com>

	* tag.c (tag_check_valid): Use RCS_valid_rev() rather than duplicating
	code.  Misc error message improvements.  

2004-08-24  Mark D. Baushke  <mdb@cvshome.org>

	* ignore.c (ignore_directory): Include the terminating NUL
	character in the directory name comparison to avoid matching
	substrings of directories by accident.
	(Report and suggested fix from James E Wilson
	<wilson@specifixinc.com>.)
	* sanity.sh (modules4): Add some more tests testing the above
	change.
	
2004-08-20  Mark D. Baushke  <mdb@cvshome.org>

	* sanity.sh (binfiles): Cleanup the 2a temporary directory.

2004-08-20  Derek Price <derek@ximbiot.com>

	Cache tags in val-tags on successful creation to avoid problems with
	write proxies.  Merged from `writeproxy2' branch.

	* tag.c (tag_filesdoneproc): Don't track posttag errors.
	(cvstag): Move addition of successful tags to val-tags to...
	(tag_fileproc): ...here and...
	(rtag_fileproc): ...here.  Consolidate returns at single location.
	(*): Misc reformatting.

	* tag.c (add_val_tag): New function with content factored from...
	(tag_check_valid): ...here.
	(cvstag): Call add_val_tag() when needed.